# sensing_py

./: .dockerignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  config.schema  pyproject.toml  renovate.json
app/: app.py
lib/proto/: echonetenergy.py  echonetlite.py
lib/sensor/: ads1015.py  apds9250.py  bp35a1.py  ezo_do.py  ezo_ph.py  ezo_rtd.py  fd_q10c.py  grove_tds.py  ltc2874.py  max31856.py  scd4x.py  sht35.py  veml6075.py  veml7700.py
src/: app.py  healthz.py
